# 1245

./: .gitignore  Makefile  build.py  build_linux.spec  build_macos.spec  build_windows.spec  deploy.ps1  deploy.py  deploy.sh  post-deploy.py  pyproject.toml  tenants.ps1  tenants.sh
.github/workflows/: build.yml  deploy.yml
