[build-system]
requires = ["setuptools>=61.0", "pyinstaller>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-deploy-tool"
version = "1.0.0"
description = "OpenClaw 部署后自动化配置工具"
requires-python = ">=3.8"
dependencies = []

[tool.pyinstaller.bundle]
includes = ["post-deploy.py"]

[tool.pyinstaller]
name = "OpenClawPostDeploy"
onefile = true
console = true
disable-windowed-traceback = true

[tool.pyinstaller.linux]
icon = null

[tool.pyinstaller.macos]
icon = null
bundle-name = "OpenClawPostDeploy"

[tool.pyinstaller.windows]
icon = null
